fix spacing for campaign site nav on tablet

--- a/src/components/header-bgs/_header-bgs.scss
+++ b/src/components/header-bgs/_header-bgs.scss
@@ -433,6 +433,10 @@ body:not(.js-enabled) {
 
     @include govuk-media-query($from: tablet) {
         padding: $great-ds-spacing-9 0;
+
+        &:has(ul.great-ds-header-bgs__menu-list--no-grid) {
+            padding: 0 $great-ds-spacing-4;
+        }
     }
 
     @include govuk-media-query($from: 900px) {
